fix: achievement overflow

--- a/frontend/static/css/components/profile.css
+++ b/frontend/static/css/components/profile.css
@@ -287,6 +287,7 @@
                 text-align: center;
                 transition: transform 0.8s;
                 transform-style: preserve-3d;
+                overflow-wrap: break-word;
             }
 
             .user-badge-image {
